--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@
             return button;
         }
 
-        function createButtons() {
-            letters = getLetters();
+        function createButtons(letters) {
             const honeycomb = document.querySelector('.honeycomb');
             honeycomb.innerHTML = ''; // Clear existing buttons
 
@@ -213,18 +212,45 @@
             return backspaceButton;
         }
 
+        function setCookie(name, value, days) {
+            const expires = new Date();
+            expires.setTime(expires.getTime() + (days * 24 * 60 * 60 * 1000));
+            document.cookie = name + '=' + encodeURIComponent(JSON.stringify(value)) + ';expires=' + expires.toUTCString() + ';path=/';
+        }
+
+        function getCookie(name) {
+            const nameEQ = name + "=";
+            const ca = document.cookie.split(';');
+            for(let i = 0; i < ca.length; i++) {
+                let c = ca[i];
+                while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+                if (c.indexOf(nameEQ) == 0) return JSON.parse(decodeURIComponent(c.substring(nameEQ.length, c.length)));
+            }
+            return null;
+        }
+
         document.addEventListener('DOMContentLoaded', function() {
-            createButtons();
+            const letters = getLetters();
+            createButtons(letters);
 
             const textInput = document.getElementById('textInput');
             const errorMessage = document.createElement('div');
             errorMessage.className = 'error-message';
             document.body.insertBefore(errorMessage, textInput);
 
-            const scoreElement = document.getElementById('score'); // Get score element
-            let score = 0; // Initialize score
-            const guessedWords = []; // Initialize guessed words array
-            const guessedWordsElement = document.getElementById('guessedWords'); // Get guessed words element
+            const scoreElement = document.getElementById('score');
+            const guessedWordsElement = document.getElementById('guessedWords');
+            let score = 0;
+            let guessedWords = [];
+
+            // Retrieve game state from cookie
+            const storedGameState = getCookie('gameState');
+            
+            if (storedGameState && storedGameState.letters.join('') === letters.join('')) {
+                score = storedGameState.score;
+                guessedWords = storedGameState.guessedWords;
+                guessedWordsElement.textContent = `Guessed Words: ${guessedWords.join(', ')}`;
+            }
 
             // Add event listener to convert input to uppercase
             textInput.addEventListener('input', function() {
@@ -258,11 +284,12 @@
                     } else if (guessedWords.includes(inputValue)) {
                         showError('Word has already been guessed.');
                     } else {
-                        score += calculateScore(inputValue.length); // Update score based on input length
-                        scoreElement.textContent = `Score: ${score} / ${maxScore}`; // Update score display
-                        guessedWords.push(inputValue); // Add guessed word to the list
-                        guessedWordsElement.textContent = `Guessed Words: ${guessedWords.join(', ')}`; // Update guessed words display
-                        textInput.value = ''; // Clear input field
+                        score += calculateScore(inputValue.length);
+                        guessedWords.push(inputValue);
+                        setCookie('gameState', { letters, score, guessedWords }, 1);
+                        scoreElement.textContent = `Score: ${score} / ${maxScore}`;
+                        guessedWordsElement.textContent = `Guessed Words: ${guessedWords.join(', ')}`;
+                        textInput.value = '';
                     }
                 } else {
                     textInput.focus();
@@ -270,7 +297,7 @@
             });
 
             const maxScore = calculateMaxScore(letters);
-            scoreElement.textContent = `Score: 0 / ${maxScore}`; // Display initial score with max score
+            scoreElement.textContent = `Score: ${score} / ${maxScore}`;
             console.log(`Maximum possible score: ${maxScore}`);
 
             // Create a container for the Enter and Backspace buttons
